Fix a bug in `gn analyze` related to build-only changes.

`gn analyze` would incorrectly claim that no compile was necessary
if given a list of files that included build file changes but not
any source file changes.

R=brettw@chromium.org
BUG=648448

Review-Url: https://codereview.chromium.org/2355713002
Cr-Commit-Position: refs/heads/master@{#419662}

Former-commit-id: 253b1190a67b4ccac5c8b2583e6b19c6a1c5e3f9